# svc-transactions/docs/swagger.json
@@ -34,8 +34,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Successful deposit response",
+                    "201": {
+                        "description": "Deposit transaction successful \u0026 created",
                         "schema": {
                             "$ref": "#/definitions/transactions.DepositResponse"
                         }
@@ -104,8 +104,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Successful withdrawal response",
+                    "201": {
+                        "description": "withdrawal transaction successful \u0026 created",
                         "schema": {
                             "$ref": "#/definitions/transactions.WithdrawalResponse"
                         }
